test/files/pos/t5954d/A_1.scala
// scalac: -Werror
package p {
  package object base {
    class B
    object B
  }
}
