test/files/neg/t12851/C_2.scala
// scalac: -Werror
class C extends T2
